After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622709 - Disk Mounter shows shadowed mounts, while it shouldn't
Disk Mounter shows shadowed mounts, while it shouldn't
Status: RESOLVED FIXED
Product: gnome-applets
Classification: Other
Component: Disk Mounter (drivemount)
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-applets Maintainers
gnome-applets Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-06-25 10:06 UTC by Aleksander Morgado
Modified: 2011-06-13 10:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
If mount is reported as shadowed, ignore it (838 bytes, patch)
2010-06-25 10:11 UTC, Aleksander Morgado
none Details | Review

Description Aleksander Morgado 2010-06-25 10:06:58 UTC
Originally reported at:
https://bugs.launchpad.net/ubuntu/+source/gnome-applets/+bug/593599

If a GMount is shadowed, which can be checked with g_mount_is_shadowed(), it shouldn't be shown in the Disk Mounter applet.

Currently, I've got a device that when connected, it's shown twice in the Disk Mounter. "gvfs-mount -li" shows 2 GMounts for the same mount, but one of them is marked as shadowed, so it seems the Disk Mounter doesn't consider that.

Also, Disk Mounter crashes when unmounting that duplicated mount.
Comment 1 Aleksander Morgado 2010-06-25 10:11:54 UTC
Created attachment 164602 [details] [review]
If mount is reported as shadowed, ignore it
Comment 2 Enrico Minack 2011-06-13 10:11:46 UTC
I committed the patch to git master: http://git.gnome.org/browse/gnome-applets/commit/?id=f7cd488eae7d25c0b2be6a709bc5ebf0420cd165