drivemount: do not show shadowed mounts

Based on gnome-applets commit: f7cd488eae7d25c0b2be6a709bc5ebf0420cd165
From: Aleksander Morgado <aleksander@lanedo.com>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=622709